# serializer version: 1
# name: test_always_failing[binary]
  '''
  Falsifying example: inner(
      v0=b'',
  )
  '''
# ---
# name: test_always_failing[booleans]
  '''
  Falsifying example: inner(
      v0=False,
  )
  '''
# ---
# name: test_always_failing[builds]
  '''
  Falsifying example: inner(
      v0=Pair(x=0, y=''),
  )
  '''
# ---
# name: test_always_failing[builds_from_type]
  '''
  Falsifying example: inner(
      v0=[],
  )
  '''
# ---
# name: test_always_failing[builds_lambda_mixed_args]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_positional_args]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_returning_object]
  '''
  Falsifying example: inner(
      v0=Pair(0, ''),
  )
  '''
# ---
# name: test_always_failing[builds_lambda_with_defaults]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_multi_arg_lambda]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_no_arg_lambda]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[builds_single_arg_lambda]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[characters]
  '''
  Falsifying example: inner(
      v0='0',
  )
  '''
# ---
# name: test_always_failing[complex_numbers]
  '''
  Falsifying example: inner(
      v0=0j,
  )
  '''
# ---
# name: test_always_failing[dates]
  '''
  Falsifying example: inner(
      v0=datetime.date(2000, 1, 1),
  )
  '''
# ---
# name: test_always_failing[datetimes]
  '''
  Falsifying example: inner(
      v0=datetime.datetime(2000, 1, 1, 0, 0),
  )
  '''
# ---
# name: test_always_failing[decimals]
  '''
  Falsifying example: inner(
      v0=Decimal('Infinity'),
  )
  '''
# ---
# name: test_always_failing[deferred]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[dictionaries]
  '''
  Falsifying example: inner(
      v0={},
  )
  '''
# ---
# name: test_always_failing[emails]
  '''
  Falsifying example: inner(
      v0='0@A.AC',
  )
  '''
# ---
# name: test_always_failing[filter]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[fixed_dictionaries]
  '''
  Falsifying example: inner(
      v0={'name': '', 'age': 0},
  )
  '''
# ---
# name: test_always_failing[flatmap_lambda]
  '''
  Falsifying example: inner(
      v0='',
  )
  '''
# ---
# name: test_always_failing[floats]
  '''
  Falsifying example: inner(
      v0=0.0,
  )
  '''
# ---
# name: test_always_failing[fractions]
  '''
  Falsifying example: inner(
      v0=Fraction(0, 1),
  )
  '''
# ---
# name: test_always_failing[from_regex]
  '''
  Falsifying example: inner(
      v0='aaa',
  )
  '''
# ---
# name: test_always_failing[from_type]
  '''
  Falsifying example: inner(
      v0=IPv4Address('0.0.0.0'),
  )
  '''
# ---
# name: test_always_failing[frozensets]
  '''
  Falsifying example: inner(
      v0=frozenset(),
  )
  '''
# ---
# name: test_always_failing[functions]
  '''
  Falsifying example: inner(
      v0=lambda x: x,
  )
  '''
# ---
# name: test_always_failing[integers]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[ip_addresses]
  '''
  Falsifying example: inner(
      v0=IPv4Address('0.0.0.0'),
  )
  '''
# ---
# name: test_always_failing[iterables]
  '''
  Falsifying example: inner(
      v0=iter([]),
  )
  '''
# ---
# name: test_always_failing[just]
  '''
  Falsifying example: inner(
      v0=42,
  )
  '''
# ---
# name: test_always_failing[lists]
  '''
  Falsifying example: inner(
      v0=[],
  )
  '''
# ---
# name: test_always_failing[many_args]
  '''
  Falsifying example: inner(
      v0=0,
      v1=0.0,
      v2='',
      v3=False,
      v4=None,
  )
  '''
# ---
# name: test_always_failing[map_chained_lambdas_opaque]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[map_lambda_opaque_result]
  '''
  Falsifying example: inner(
      v0=Opaque(),
  )
  '''
# ---
# name: test_always_failing[map_to_bytes]
  '''
  Falsifying example: inner(
      v0=hashlib.sha256(b'').digest(),
  )
  '''
# ---
# name: test_always_failing[map_to_str]
  '''
  Falsifying example: inner(
      v0='0',
  )
  '''
# ---
# name: test_always_failing[mixed_strategies]
  '''
  Falsifying example: inner(
      v0=[],
      v1={},
      v2=10,
  )
  '''
# ---
# name: test_always_failing[none]
  '''
  Falsifying example: inner(
      v0=None,
  )
  '''
# ---
# name: test_always_failing[one_of]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[permutations]
  '''
  Falsifying example: inner(
      v0=[0, 1, 2, 3, 4],
  )
  '''
# ---
# name: test_always_failing[randoms]
  '''
  Falsifying example: inner(
      v0=HypothesisRandom(generated data),
  )
  '''
# ---
# name: test_always_failing[recursive]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[sampled_from]
  '''
  Falsifying example: inner(
      v0='alice',
  )
  '''
# ---
# name: test_always_failing[sets]
  '''
  Falsifying example: inner(
      v0=set(),
  )
  '''
# ---
# name: test_always_failing[shared]
  '''
  Falsifying example: inner(
      v0=0,
  )
  '''
# ---
# name: test_always_failing[slices]
  '''
  Falsifying example: inner(
      v0=slice(None, None, None),
  )
  '''
# ---
# name: test_always_failing[text]
  '''
  Falsifying example: inner(
      v0='',
  )
  '''
# ---
# name: test_always_failing[timedeltas]
  '''
  Falsifying example: inner(
      v0=datetime.timedelta(0),
  )
  '''
# ---
# name: test_always_failing[times]
  '''
  Falsifying example: inner(
      v0=datetime.time(0, 0),
  )
  '''
# ---
# name: test_always_failing[tuples]
  '''
  Falsifying example: inner(
      v0=(0, '', False),
  )
  '''
# ---
# name: test_always_failing[two_args]
  '''
  Falsifying example: inner(
      v0=0,
      v1='',
  )
  '''
# ---
# name: test_always_failing[uuids]
  '''
  Falsifying example: inner(
      v0=UUID('e3e70682-c209-4cac-629f-6fbed82c07cd'),
  )
  '''
# ---
# name: test_always_failing_explain[explain_from_regex]
  '''
  Falsifying example: inner(
      v0='00',  # or any other generated value
  )
  '''
# ---
# name: test_always_failing_explain[explain_map_to_str]
  '''
  Falsifying example: inner(
      v0='0',  # or any other generated value
  )
  '''
# ---
# name: test_always_failing_explain[map_lambda_explain_forces_call_style]
  '''
  Falsifying example: inner(
      v0=1,  # or any other generated value
  )
  '''
# ---
